fix: scrollbar not fixed to editor section container

--- a/src/components/editor/editor.scss
+++ b/src/components/editor/editor.scss
@@ -13,3 +13,17 @@
 .cm-panels-bottom {
 	background-color: #2d2f33 !important;
 }
+.ͼ1u .cm-fat-cursor {
+	outline: solid 1px #6b7ff2 !important;
+	background-color: #6b7ff2 !important;
+}
+// .cm-fat-cursor .cm-cursor-primary {
+// 	outline: solid 1px #6b7ff2 !important;
+// }
+// .ͼ1v:not(.cm-focused) .cm-fat-cursor {
+// 	background-color: #6b7ff2 !important;
+// 	outline: solid 1px #6b7ff2 !important;
+// }
+.ͼ15 .cm-selectionLayer .cm-selectionBackground {
+	background-color: #878a8c30 !important;
+}
